syntax = "proto3";

package knn.collab;

option java_multiple_files = true;
option java_package = "ai.pipestream.search.grpc";

service KnnNodeService {
  // Primary search: Shard streams hits individually as they are found
  rpc Search (SearchRequest) returns (stream SearchResponse);

  // High-speed coordination: Truly bi-directional
  // Shard pushes local floor updates -> Coordinator pushes global floor updates
  rpc Coordinate (stream CoordinateRequest) returns (stream CoordinateResponse);
}

message SearchRequest {
  string query_id = 1;
  repeated float vector = 2;
  int32 k = 3;
  bool collaborative = 4;
  // Optional collection name. If set, searches within the named collection.
  // If empty, falls back to legacy knn.index.path config.
  string collection = 5;
}

message SearchResponse {
  int64 global_id = 1;
  float score = 2;
  string chunk = 3;
  repeated float vector = 4;
  
  // Optional metadata sent with the final hit or a terminal signal
  int64 nodes_visited = 5;
  int64 search_time_ms = 6;
}

message CoordinateRequest {
  string query_id = 1;
  float min_score = 2;
  bytes neighborhood_hint = 3; // 1024-bit binary signature
}

message CoordinateResponse {
  string query_id = 1;
  float min_score = 2;
  bytes neighborhood_hint = 3; // 1024-bit binary signature
}
